Fix spacing on header container

--- a/style.css
+++ b/style.css
@@ -37,10 +37,22 @@ html {
     width: inherit;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    font-family: "Josefin Sans";
+    justify-content: space-evenly;
+    align-items: flex-start;
 }
 
+.first-paragraph,
+.second-paragraph {
+    font-family: "Josefin Sans";
+    font-size: 1.5rem;
+    width: 45%;
+    padding-left: 5%;
+}
+
+.first-paragraph {
+    line-height: 2rem;
+    margin-bottom: -5%;
+}
 
 .body {
     height: calc(100%/3);
